--- a/Project Euler/Files/Res/Storyboards/iPhone/MainStoryboard_iPhone.storyboard
+++ b/Project Euler/Files/Res/Storyboards/iPhone/MainStoryboard_iPhone.storyboard
@@ -362,7 +362,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="68A-Dj-xoW">
-                                <rect key="frame" x="5" y="197" width="310" height="246"/>
+                                <rect key="frame" x="5" y="197" width="310" height="226"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="insetFor6xAndEarlier" minX="0.0" minY="20" maxX="0.0" maxY="-20"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -509,7 +509,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Requires Mathematics" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9AR-JL-Vxn">
-                                <rect key="frame" x="5" y="448" width="116.5" height="15"/>
+                                <rect key="frame" x="5" y="428" width="116.5" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="hfx-R1-agj"/>
                                 </constraints>
@@ -518,9 +518,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Has Multiple Solutions" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zG2-Hd-Aci">
-                                <rect key="frame" x="198" y="448" width="117" height="15"/>
+                                <rect key="frame" x="198" y="428" width="117" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="iTV-o4-dFB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Uses Functional Programming" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yAJ-Tw-fsw">
+                                <rect key="frame" x="5" y="448" width="157.5" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="vuU-cQ-5mf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -534,8 +543,10 @@
                             <constraint firstItem="fB9-G9-pHS" firstAttribute="top" secondItem="5Ag-AW-pPG" secondAttribute="bottom" constant="5" id="464-K8-8lm"/>
                             <constraint firstItem="aU8-ij-SKt" firstAttribute="centerX" secondItem="g8w-Vm-9j5" secondAttribute="centerX" id="4aT-T0-NJc"/>
                             <constraint firstItem="f5F-cQ-hry" firstAttribute="top" secondItem="aU8-ij-SKt" secondAttribute="bottom" constant="5" id="4mW-sH-HAF"/>
+                            <constraint firstItem="yAJ-Tw-fsw" firstAttribute="leading" secondItem="9AR-JL-Vxn" secondAttribute="leading" id="5Pp-sB-sla"/>
                             <constraint firstItem="atg-Ue-tqo" firstAttribute="trailing" secondItem="68A-Dj-xoW" secondAttribute="trailing" id="65e-P1-UaX"/>
                             <constraint firstItem="Ewd-cm-Ykd" firstAttribute="leading" secondItem="Qq1-jn-f9C" secondAttribute="leading" id="6uK-B3-jxE"/>
+                            <constraint firstItem="yAJ-Tw-fsw" firstAttribute="top" secondItem="9AR-JL-Vxn" secondAttribute="bottom" constant="5" id="7nB-6F-hz0"/>
                             <constraint firstItem="zxl-ng-3Sy" firstAttribute="width" relation="lessThanOrEqual" secondItem="dz8-ta-DFM" secondAttribute="width" id="8TK-Vd-LYw"/>
                             <constraint firstItem="zxl-ng-3Sy" firstAttribute="centerX" secondItem="dz8-ta-DFM" secondAttribute="centerX" id="9BF-0l-Lko"/>
                             <constraint firstItem="5Ag-AW-pPG" firstAttribute="top" secondItem="JDy-qD-FLz" secondAttribute="bottom" constant="5" id="9UW-cP-Xv0"/>
@@ -561,7 +572,7 @@
                             <constraint firstItem="Tcn-bB-kkU" firstAttribute="top" secondItem="S5r-gN-S6P" secondAttribute="bottom" constant="5" id="LLD-NZ-onO"/>
                             <constraint firstItem="2bm-jV-Hoo" firstAttribute="leading" secondItem="QuP-pa-30Z" secondAttribute="leading" id="Lis-p2-847"/>
                             <constraint firstItem="lr8-rG-feB" firstAttribute="centerX" secondItem="g8w-Vm-9j5" secondAttribute="centerX" id="N4f-4y-sML"/>
-                            <constraint firstItem="atg-Ue-tqo" firstAttribute="top" secondItem="zG2-Hd-Aci" secondAttribute="bottom" constant="5" id="NNr-eg-PpT"/>
+                            <constraint firstItem="atg-Ue-tqo" firstAttribute="top" secondItem="zG2-Hd-Aci" secondAttribute="bottom" constant="25" id="NNr-eg-PpT"/>
                             <constraint firstItem="S5r-gN-S6P" firstAttribute="leading" secondItem="68A-Dj-xoW" secondAttribute="leading" id="Ntp-Tr-un9"/>
                             <constraint firstItem="966-p5-ABN" firstAttribute="top" secondItem="QuP-pa-30Z" secondAttribute="bottom" id="O9L-IB-IBC"/>
                             <constraint firstItem="dz8-ta-DFM" firstAttribute="leading" secondItem="68A-Dj-xoW" secondAttribute="leading" id="OVb-Lw-XT6"/>
@@ -643,6 +654,7 @@
                         <outlet property="_questionTechniqueLabel" destination="dz8-ta-DFM" id="Sty-ox-TUk"/>
                         <outlet property="_questionTextView" destination="68A-Dj-xoW" id="A2e-TC-hlY"/>
                         <outlet property="_questionTitleLabel" destination="FE8-Kb-SuB" id="nLp-Zo-BaZ"/>
+                        <outlet property="_questionUsesFunctionalProgramming" destination="yAJ-Tw-fsw" id="tZP-9a-mUu"/>
                         <outlet property="_questionUsesHelperMethodsLabel" destination="FfW-Xp-PXv" id="m8z-jZ-wGA"/>
                         <outlet property="_solutionLineCountLabel" destination="Ewd-cm-Ykd" id="f8A-K2-E5D"/>
                         <outlet property="_startedOnDateLabel" destination="JDy-qD-FLz" id="VFl-AW-AE0"/>
